# jackdaw

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
.jsn/: components.jsn  registry.jsn
assets/examples/scenes/: scene.jsn
book/src/developer-guide/: extending-the-editor.md
crates/jackdaw_animation/: Cargo.toml
crates/jackdaw_animation/src/: blend_graph.rs  clip.rs  commands.rs  compile.rs  lib.rs  player.rs  timeline.rs
crates/jackdaw_api/: Cargo.toml
crates/jackdaw_api/src/: lib.rs  lifecycle.rs  operator.rs  registries.rs  snapshot.rs
crates/jackdaw_api_internal/src/: export.rs  extensions_config.rs  ffi.rs  lib.rs  lifecycle.rs  operator.rs  registries.rs  snapshot.rs
crates/jackdaw_api_macros/: Cargo.toml
crates/jackdaw_api_macros/src/: lib.rs
crates/jackdaw_avian_integration/: Cargo.toml
crates/jackdaw_avian_integration/src/: lib.rs  simulation.rs
crates/jackdaw_bsn/: Cargo.toml
crates/jackdaw_bsn/src/: apply.rs  ast.rs  emitter.rs  lib.rs  loader.rs  sync.rs
crates/jackdaw_camera/: Cargo.toml
crates/jackdaw_commands/: Cargo.toml
crates/jackdaw_dylib/src/: lib.rs
crates/jackdaw_feathers/: Cargo.toml
crates/jackdaw_feathers/src/: alert.rs  button.rs  checkbox.rs  collapsible.rs  context_menu.rs  dialog.rs  file_browser.rs  icons.rs  inspector_field.rs  lib.rs  list_view.rs  menu_bar.rs  panel_header.rs  panel_section.rs  popover.rs  split_panel.rs  status_bar.rs  text_edit.rs  toast.rs  tokens.rs  tooltip.rs  tree_view.rs  utils.rs  variant_edit.rs  vector_edit.rs
crates/jackdaw_feathers/src/color_picker/: input_fields.rs  mod.rs  visuals.rs
crates/jackdaw_geometry/: Cargo.toml
crates/jackdaw_geometry/src/: lib.rs
crates/jackdaw_jsn/: Cargo.toml
crates/jackdaw_jsn/src/: ast.rs  format.rs  lib.rs  loader.rs  mesh_rebuild.rs
crates/jackdaw_loader/src/: compat.rs  lib.rs
crates/jackdaw_node_graph/: Cargo.toml
crates/jackdaw_node_graph/examples/: demo.rs
crates/jackdaw_node_graph/src/: commands.rs  connection.rs  interaction.rs  selection.rs  sync.rs
crates/jackdaw_panels/src/: drag.rs  layout.rs  reconcile.rs  split.rs  tree.rs  workspace_tabs.rs
crates/jackdaw_remote/: Cargo.toml
crates/jackdaw_remote/src/: lib.rs  methods.rs  scene_snapshot.rs  schema.rs
crates/jackdaw_runtime/: Cargo.toml
crates/jackdaw_runtime/src/: lib.rs
crates/jackdaw_rustc_wrapper/: Cargo.toml
crates/jackdaw_rustc_wrapper/src/: main.rs
crates/jackdaw_sdk/src/: lib.rs
crates/jackdaw_terrain/: Cargo.toml
crates/jackdaw_terrain/src/: brush.rs  generate.rs
crates/jackdaw_widgets/: Cargo.toml
crates/jackdaw_widgets/src/: menu_bar.rs  split_panel.rs  tree_view.rs
docs/: operators.md
examples/: basic.rs  custom_components.rs  embedded_game.rs  jsn_load.rs  navmesh_server.rs  remote_game.rs
examples/extension/: add_window.rs  call_operator.rs  extend_panel.rs  extend_window.rs  keybinding.rs  menu_entry.rs  minimal_extension.rs  operator.rs  window.rs
examples/extension/dynamic_extension/src/: lib.rs
examples/extension/viewable_camera_extension/src/: lib.rs
examples/sample_extension/: Cargo.toml
examples/sample_extension/src/: lib.rs
examples/viewable_camera_extension/src/: lib.rs
src/: add_entity_picker.rs  alignment_guides.rs  asset_browser.rs  builtin_extensions.rs  colors.rs  commands.rs  core_extension.rs  custom_properties.rs  default_style.rs  document_ops.rs  draw_brush.rs  entity_ops.rs  entity_templates.rs  ext_build.rs  extension_lifecycle.rs  extension_resolution.rs  extension_watcher.rs  extensions_config.rs  extensions_dialog.rs  face_grid.rs  gizmos.rs  hierarchy.rs  hot_reload.rs  keybind_settings.rs  layout.rs  lib.rs  main.rs  material_browser.rs  material_preview.rs  measure_tool.rs  modal_transform.rs  new_project.rs  physics_overlays.rs  physics_tool.rs  pie.rs  prefab_picker.rs  project_files.rs  project_select.rs  scene_io.rs  selection.rs  (+7 more)
src/brush/: gizmo_overlay.rs  hull.rs  interaction.rs  mesh.rs  mod.rs
src/inspector/: anim_diamond.rs  brush_display.rs  component_display.rs  component_picker.rs  custom_props_display.rs  material_display.rs  mod.rs  physics_display.rs  reflect_fields.rs
src/navmesh/: brp_client.rs  toolbar.rs  visualization.rs
src/remote/: brp.rs  connection.rs  entity_browser.rs  mod.rs  panel.rs  registry_fetch.rs  remote_inspector.rs
src/terrain/: inspector.rs  sculpt.rs  toolbar.rs
tests/: dylib_loading.rs  headless.rs  integration.rs
tests/fixtures/test_fixture_extension/src/: lib.rs
tests/util/: mod.rs
