[package]
name = "jackdaw"
version = "0.2.1"
edition = "2024"
description = "A 3D level editor built with Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"
readme = "README.md"
keywords = ["bevy", "editor", "3d", "level-editor"]
categories = ["game-development", "graphics"]
exclude = ["assets/environment_maps/"]

[features]
default = []
hot-reload = []

[workspace]
members = ["crates/*"]

[dependencies]
bevy.workspace = true
jackdaw_jsn.workspace = true
jackdaw_geometry.workspace = true
bevy_monitors.workspace = true
jackdaw_camera.workspace = true
jackdaw_feathers.workspace = true
jackdaw_widgets.workspace = true
jackdaw_commands.workspace = true
jackdaw_terrain.workspace = true
jackdaw_remote.workspace = true
jackdaw_bsn.workspace = true
serde.workspace = true
serde_json.workspace = true
parry3d.workspace = true
rfd.workspace = true
bevy_rerecast.workspace = true
ehttp.workspace = true
bincode.workspace = true
base64.workspace = true
anyhow.workspace = true
dirs.workspace = true
regex.workspace = true
pathdiff.workspace = true
notify = "8"

[workspace.dependencies]
bevy = { git = "https://github.com/jbuehler23/bevy", branch = "bsn", features = ["experimental_bevy_feathers", "serialize", "debug", "bevy_remote", "file_watcher", "bevy_dev_tools"] }
jackdaw_jsn = { version = "0.2.1", path = "crates/jackdaw_jsn" }
jackdaw_geometry = { version = "0.2.1", path = "crates/jackdaw_geometry" }
bevy_monitors = { git = "https://github.com/jbuehler23/bevy_monitors", branch = "bsn" }
jackdaw_camera = { version = "0.2.1", path = "crates/jackdaw_camera" }
jackdaw_feathers = { version = "0.2.1", path = "crates/jackdaw_feathers" }
jackdaw_widgets = { version = "0.2.1", path = "crates/jackdaw_widgets" }
jackdaw_commands = { version = "0.2.1", path = "crates/jackdaw_commands" }
jackdaw_terrain = { version = "0.2.1", path = "crates/jackdaw_terrain" }
jackdaw_remote = { version = "0.2.1", path = "crates/jackdaw_remote" }
jackdaw_bsn = { version = "0.2.1", path = "crates/jackdaw_bsn" }
noise = "0.9"
rand = "0.9"
serde = "1"
lucide-icons = "0.563"
serde_json = "1"
smol_str = "0.2"
parry3d = "0.26"
rfd = "0.15"
bevy_rerecast = { git = "https://github.com/jbuehler23/rerecast", branch = "bsn", default-features = true }
ehttp = { version = "0.5", default-features = false, features = ["native-async", "json"] }
bincode = { version = "2", features = ["serde"], default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
anyhow = { version = "1", default-features = false }
dirs = "6"
regex = "1"
pathdiff = "0.2"

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
collapsible_if = "allow"
redundant_closure = "allow"

[lints]
workspace = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"

[patch.crates-io]
bevy = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_a11y = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_android = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_app = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_asset = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_asset_macros = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_camera = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_color = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_core_pipeline = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_derive = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_diagnostic = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_ecs = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_ecs_macros = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_encase_derive = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_gizmos = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_gizmos_macros = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_gizmos_render = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_image = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_input = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_input_focus = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_internal = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_light = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_log = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_macro_utils = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_math = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_mesh = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_pbr = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_picking = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_platform = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_ptr = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_reflect = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_reflect_derive = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_remote = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_render = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_render_macros = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_shader = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_sprite = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_sprite_render = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_state = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_state_macros = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_tasks = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_text = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_time = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_transform = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_ui = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_ui_render = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_utils = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_window = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }

# Redirect bevyengine/bevy git deps (from third-party forks) to our BSN fork
[patch."https://github.com/bevyengine/bevy"]
bevy = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_app = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_asset = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_camera = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_color = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_core_pipeline = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_derive = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_ecs = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_ecs_macros = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_gizmos = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_image = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_input = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_input_focus = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_internal = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_light = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_math = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_material = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_mesh = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_pbr = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_picking = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_platform = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_reflect = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_reflect_derive = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_remote = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_render = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_text = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_transform = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_tasks = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_ui = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_ui_render = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_utils = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
bevy_window = { git = "https://github.com/jbuehler23/bevy", branch = "bsn" }
