[package]
name = "jackdaw_bsn"
version = "0.2.1"
edition = "2024"
description = "BSN scene format support for the jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
bevy.workspace = true
pathdiff.workspace = true

[lints]
workspace = true
