[package]
name = "jackdaw_remote"
version = "0.3.0"
edition = "2024"
description = "Remote game integration for the Jackdaw 3D level editor"
license = "MIT OR Apache-2.0"

[dependencies]
bevy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
